Add null check and use modern Java toList() method
Co-authored-by: dev-yunseong <88422717+dev-yunseong@users.noreply.github.com>